--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -155,7 +155,7 @@
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'account'}? active" href="#" th:href="@{/admin/admin_hom}" >가입자</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'post'}? active" href="#" th:href="@{/admin/admin_post}">게시물</a>
     <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'raid'}? active" href="#" th:href="@{/admin/admin_raid}">레이드</a>
-
+    <a class="list-group-item list-group-item-action" th:classappend="${currentMenu == 'write'}? active" href="#" th:href="@{/admin/write}">공지사항 작성</a>
 </div>
 
 <script type="application/javascript" th:inline="javascript" th:fragment="ajax-csrf-header">
