컨트롤러 코드 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,8 @@
         <h5 class="text-center">현재 서비스 중인 사이트가 아닙니다. </h5>
         <h5 class="text-center">이메일 주소는 존재 하지 않는 이메일로 가입 해주시면 됩니다. </h5>
         <h3 class="text-center">로그인 하시면 기능 사용가능합니다.</h3>
+        <h3 class="text-center">TEST 계정 : test01 / 123123123  </h3>
+        <h3 class="text-center">test01 ~ 03 사용가능합니다</h3>
         <hr class="my-2">
         <div class="py-3">
             <h1 class="text-xl-start ">프로젝트 설명</h1>
