--- a/src/main/resources/templates/raid/list-raid.html
+++ b/src/main/resources/templates/raid/list-raid.html
@@ -8,7 +8,7 @@
         <div class="col-2">
             <div th:replace="fragments.html :: raid-menu"></div>
         </div>
-        <div class="container col-8">
+        <div class="container col-9">
             <div class="col-sm-10">
                 <div class="row">
                     <div class="col-md-3" th:each="raid: ${raids.getContent()}">
@@ -45,55 +45,41 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-        <div class="row justify-content-center">
-            <div class="col-sm-10">
-                <nav>
-                    <ul class="pagination justify-content-center">
-                        <li class="page-item" th:classappend="${!raids.hasPrevious()}? disabled">
-                            <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() - 1}}"
-                               class="page-link" tabindex="-1" aria-disabled="true">
-                                이전
-                            </a>
-                        </li>
+            <div class="row justify-content-center">
+                <div class="col-sm-10">
+                    <nav>
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" th:classappend="${!raids.hasPrevious()}? disabled">
+                                <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() - 1}}"
+                                   class="page-link" tabindex="-1" aria-disabled="true">
+                                    이전
+                                </a>
+                            </li>
 
-                        <li class="page-item" th:classappend="${i == raids.getNumber()}? active"
-                            th:each="i: ${#numbers.sequence(0, raids.getTotalPages() - 1)}">
-                            <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"
-                               class="page-link" href="#" th:text="${i + 1}">1</a>
-                        </li>
-                        <li class="page-item" th:classappend="${!raids.hasNext()}? disabled">
-                            <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() + 1}}"
-                               class="page-link">
-                                다음
-                            </a>
-                        </li>
-                    </ul>
+                            <li class="page-item" th:classappend="${i == raids.getNumber()}? active"
+                                th:each="i: ${#numbers.sequence(0, raids.getTotalPages() - 1)}">
+                                <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"
+                                   class="page-link" href="#" th:text="${i + 1}">1</a>
+                            </li>
+                            <li class="page-item" th:classappend="${!raids.hasNext()}? disabled">
+                                <a th:href="@{'/raid/list-raid?tag=' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() + 1}}"
+                                   class="page-link">
+                                    다음
+                                </a>
+                            </li>
+                        </ul>
 
-<!--                    <ul class="pagination justify-content-center" th:if="${#strings.equals(tag, 'null')}">-->
-<!--                        <li class="page-item" th:classappend="${!raids.hasPrevious()}? disabled">-->
-<!--                            <a th:href="@{'/raid/list-raid?'+ '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() - 1}}"-->
-<!--                               class="page-link" tabindex="-1" aria-disabled="true">-->
-<!--                                이전-->
-<!--                            </a>-->
-<!--                        </li>-->
-
-<!--                        <li class="page-item" th:classappend="${i == raids.getNumber()}? active"-->
-<!--                            th:each="i: ${#numbers.sequence(0, raids.getTotalPages() - 1)}">-->
-<!--                            <a th:href="@{'/raid/list-raid?'+ '&sort=' + ${sortProperty} + ',desc&page=' + ${i}}"-->
-<!--                               class="page-link" href="#" th:text="${i + 1}">1</a>-->
-<!--                        </li>-->
-<!--                        <li class="page-item" th:classappend="${!raids.hasNext()}? disabled">-->
-<!--                            <a th:href="@{'/raid/list-raid' + ${tag} + '&sort=' + ${sortProperty} + ',desc&page=' + ${raids.getNumber() + 1}}"-->
-<!--                               class="page-link">-->
-<!--                                다음-->
-<!--                            </a>-->
-<!--                        </li>-->
-<!--                    </ul>-->
-                </nav>
+                    </nav>
+                </div>
             </div>
         </div>
+        <div class="col-1">
+            <div th:replace="fragments.html :: raid-list-game"></div>
+        </div>
+
+    </div>
+
+
 
     </div>
 
