--- a/src/main/resources/templates/raid/list-raid-map.html
+++ b/src/main/resources/templates/raid/list-raid-map.html
@@ -6,7 +6,7 @@
 <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
-            <div th:replace="fragments.html :: raid-menu"></div>
+            <div th:replace="fragments.html :: raid-menu-map"></div>
         </div>
         <div class="container col-9">
             <div class="col-sm-10">
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="col-1">
-            <div th:replace="fragments.html :: raid-list-game(currentMenu='lost')"></div>
+            <div th:replace="fragments.html :: raid-list-game(currentMenu='map')"></div>
         </div>
 
     </div>
